2008-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R, R/Tsparse.R: get rid of some disambiguation warnings

	* R/not.R: fix !<ldiMatrix>
	implement two old "FIXME"s:  !<ldenseMatrix> & !<ndenseMatrix>

	* R/diagMatrix.R (Ops): fix one-off thinko in
	<diagonal> o <numeric> methods

	* inst/test-tools.R: checkMatrix(): drop0(m12) unconditionally

2008-05-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (Ops): more <diagonal> o <Matrix> methods
	* tests/Simple.R: testing the above

2008-05-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: also import "Ops" {found via new tools:::get_S4_generics_with_methods()}

2008-05-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (dimnames<-): dimnames(.) <- NULL works with a message;
	* NAMESPACE (unname): finally exported

2008-04-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (cholMat): possibly keep packed

	* inst/test-tools.R (checkMatrix): add fixed determinant.matrix()
	for R < 2.7.0.

	* R/Tsparse.R ([): for triangularMatrix, check if result may be
	triangular.
	* tests/indexing.R: regression test

2008-04-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/test-tools.R (checkMatrix): test <Ops> not only for dMatrix
	* R/Ops.R: more methods, for lMatrix/nMatrix

2008-04-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm.R: new file for all expm() methods; notably new ones for
	diagonal*, triangular*, symmetric* and also simple "matrix".

2008-04-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsyMatrix.R: setAs(.) rather than setIs(.)  "to dpoMatrix"

	* inst/test-tools.R (assert.EQ.mat): better message when not equal

	* src/dgeMatrix.c (dgeMatrix_matrix_crossprod): allow integer RHS.

	* R/AllClass.R (ddiMatrix,ldiMatrix): extend [dl]Matrix instead of
	[dl]denseMatrix {identical slots; but more logical method dispatch}

2008-04-23  Martin Maechler  <maechler@stat.math.ethz.ch>
